# whisk

./: Cargo.toml  LICENSE  grammar.txt  todo.txt
whiskc/: Cargo.toml
whiskc/src/: compile.rs  interner.rs  lib.rs  main.rs  module.rs  new_symbol_table.rs  symbol.rs  symbol_table.rs  ty.rs
whiskc/src/ast/: location.rs
whiskc/src/ast/nodes/: ast.rs  attributes.rs  expr.rs  func.rs  item.rs  mod.rs  punctuate.rs  stmt.rs  ty.rs
whiskc/src/ast/parsing/: lexer.rs  mod.rs  parsers.rs  token.rs
whiskc/src/ast_resolved/: errors.rs  mod.rs
whiskc/src/ast_resolved/compute/: mod.rs
whiskc/src/ast_resolved/nodes/: ast.rs  expr.rs  func.rs  mod.rs  stmt.rs  ty.rs
whiskc/src/ast_resolved/passes/: constant_fold.rs  mod.rs
whiskc/src/ast_resolved/resolve/: ast.rs  expr.rs  func.rs  mod.rs  stmt.rs  ty.rs
whiskc/src/ast_resolved/visit/: mod.rs  visit_immut.rs  visit_mut.rs
whiskc/src/cfg/: builder.rs  mod.rs
whiskc/src/cfg/cvt/: stmt.rs
whiskc/src/cfg/display/: basic_block.rs  func.rs  inst.rs  mod.rs  value.rs
whiskc/src/cfg/nodes/: basic_block.rs  inst.rs  value.rs
whiskc/src/codegen/: expr.rs  func.rs  mod.rs  stmt.rs
whiskc/src/codegen/nodes/: func.rs  program.rs
whiskc/src/lowering/: errors.rs  mod.rs  print.rs
whiskc/src/lowering/new_resolve/: ast.rs  expr.rs  func.rs  item.rs  mod.rs  stmt.rs  ty.rs
whiskc/src/lowering/nodes/: expr.rs  func.rs  (+3 more)
whiskc/src/module/: errors.rs  mod.rs
whiskc/src/new_ast/: errors.rs  lexer.rs  mod.rs  parser.rs  token.rs
whiskc/src/symbol/: common.rs  inject.rs  mod.rs  symbol_id.rs  symbol_table.rs  ty.rs
(+89 files in other folders)
